# disyn

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cruxfile  LICENSE-APACHE  README.md  USAGE.md  promote.toml  rustqual.toml  taskit.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.taskit-cache/: compile-cache.json  master-hash  pre-commit.json  pre-push.json
crates/disyn-app/: Cargo.toml  README.md
crates/disyn-app/examples/: pipeline.rs
crates/disyn-app/src/: config.rs  main.rs  orchestrator.rs
crates/disyn-core/: Cargo.toml  README.md
crates/disyn-core/src/: error.rs  lib.rs  ports.rs  types.rs
crates/disyn-memory/: Cargo.toml  README.md
crates/disyn-memory/src/: in_memory.rs
crates/disyn-neural/: Cargo.toml  README.md
crates/disyn-neural/src/: lib.rs  ollama.rs  openai.rs  shared.rs
crates/disyn-runtime/: Cargo.toml  README.md
crates/disyn-runtime/src/: budget.rs  executor.rs  lib.rs  telemetry.rs
crates/disyn-symbolic/: Cargo.toml  README.md
crates/disyn-symbolic/src/: formal_verifier.rs  lib.rs  repair.rs  rules.rs  verifier.rs
crates/disyn-xtask/: Cargo.toml
crates/disyn-xtask/src/: main.rs
docs/: book.toml
docs/ideas/: arch-layout.md
docs/plans/: 2026-06-06-disyn-architecture.md  2026-06-06-disyn-implementation.md
docs/src/: README.md  SUMMARY.md
docs/src/crates/: disyn-app.md  disyn-core.md  disyn-memory.md  disyn-neural.md  disyn-runtime.md  disyn-symbolic.md  xtask.md
xtask/src/: lib.rs  main.rs
xtask/tests/: dispatcher.rs
