[package]
name = "disyn-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
disyn-core = { path = "../disyn-core" }
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
