[package]
name = "disyn-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Memory store implementation for the disyn agent pipeline"
repository = "https://github.com/89jobrien/disyn"

[dependencies]
async-trait.workspace = true
disyn-core = { path = "../disyn-core", version = "0.1.0" }
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
