[package]
name = "disyn-neural"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Neural proposal engine and fact extractor for the disyn agent pipeline"
repository = "https://github.com/89jobrien/disyn"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
disyn-core = { path = "../disyn-core", version = "0.1.0" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
