[package]
name = "disyn-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
disyn-core = { path = "../disyn-core" }
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
uuid.workspace = true
