[package]
name = "disyn-symbolic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Symbolic verifier and repair engine for the disyn agent pipeline"
repository = "https://github.com/89jobrien/disyn"

[dependencies]
disyn-core = { path = "../disyn-core", version = "0.1.0" }
serde_json.workspace = true

[dev-dependencies]
uuid.workspace = true
